# cicd_mlops

./: README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml
config/: params.yaml
src/components/: data_ingestion.py  model_training.py
