[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cicd-mlops"
version = "0.1.0"
description = "Testing the CICD with mlops"
authors = [
    {name='Ravi Kumar', email="travikumar3456@gmail.com" }
]
readme = "README.md"
requires-python = ">3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]


[tool.flit.module]
name = "src"

[tool.ruff]
line-length = 99
src = 'src'
include = ["cicd_mlops/**/*.py", 'pyproject.toml']

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true